--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background: #333;
+            background: #4D4DFF;
             color: #fff;
             padding: 1rem 0;
             text-align: center;
