editing index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background: #4D4DFF;
+            background: #003e49;
             color: #fff;
             padding: 1rem 0;
             text-align: center;
@@ -40,7 +40,7 @@
         <h1>Gary's Research Portfolio</h1>
     </header>
     <header>
-        <h1>Early Diagnosis and Early Intervention in Hematology</h1>
+        <h1><strong>Early Diagnosis</strong> and <strong>Early Intervention</strong> in Hematology</h1>
     </header>
     <div class="container">
         <h2>About Me</h2>
