--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-	<title>Bootstrap-5.0 Template 2023</title>
+	<title>Gary's Research Portfolio</title>
 </head>
 <body>
 		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container-fluid">
-    <a class="navbar-brand text-capitalize" href="index.html">talal wasim</a>
+    <a class="navbar-brand text-capitalize" href="index.html">H. Gary Zhao        <strong>Early Diagnosis and Early Intervention in Translational Hematology</strong></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,25 +32,25 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-capitalize active" href="about.html">about us</a>
+          <a class="nav-link text-capitalize active" href="about.html">about me</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Project
+            Projects
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Project #1</a></li>
-            <li><a class="dropdown-item" href="#">Project #2</a></li>
+            <li><a class="dropdown-item" href="#">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
+            <li><a class="dropdown-item" href="#">[Data-driven ] Early Intervention of Clonal Hematopoiesis and Chronic Neoplasms</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Project Demo Youtube</a></li>
+            
           </ul>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-capitalize active" href="gallery.html">gallery</a>
+          <a class="nav-link text-capitalize active" href="Publications.html">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-capitalize active" href="contact.html">contact us</a>
+          <a class="nav-link text-capitalize active" href="contact.html">contact me</a>
         </li>
         
       </ul>
@@ -71,21 +71,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/slider1.jpg" class="d-block w-100" alt="images/slider1.jpg">
+      <img src="images/images/Picture1.bmp" class="d-block w-100" alt="images/images/Picture1.bmp">
       <div class="carousel-caption d-md-block">
         <h5>First slide label</h5>
         <p>Some WWW representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/slider2.jpg" class="d-block w-100" alt="images/slider1.jpg">
+      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.png">
       <div class="carousel-caption d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/slider1.jpg" class="d-block w-100" alt="images/slider1.jpg">
+      <img src="images/images/precision medicine.png" class="d-block w-100" alt="images/images/precision medicine.png">
       <div class="carousel-caption d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -124,7 +124,7 @@
 			<div class="row my-5">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6">
 					<figure>
-						<img src="images/g1.jpg" class="img-fluid about_img">
+						<img src="images/images/Picture1.bmp" class="img-fluid about_img">
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
