--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
-					<h1>Helong Gary Zhao, B.Engineering, PhD</h1>
+					<h1>Helong Gary Zhao, B.Eng., Ph.D.</h1>
 					<p>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</p>
 					<button type="button" class="btn btn-outline-info" data-bs-toggle="tooltip" data-bs-placement="right" title="who am i">Learn More</button>
 				</div>
