--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/images/Picture1.bmp" class="d-block w-100" alt="images/images/Picture1.bmp">
+      <img src="images/images/under construction.png" class="d-block w-100" alt="images/images/under construction.png">
       <div class="carousel-caption d-md-block">
         <h5>First slide label</h5>
         <p>Some WWW representative placeholder content for the first slide.</p>
@@ -157,7 +157,7 @@
 
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 my-5">
 					<figure>
-						<img src="images/slider3.jpg" class="img-fluid about_img">
+						<img src="images/images/Picture1.bmp" class="img-fluid about_img">
 					</figure>
 				</div>
 				
