--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
@@ -78,7 +78,7 @@
     <div class="carousel-item active">
       <img src="images/images/under construction.png" class="d-block w-100" alt="images/images/under construction.png">
       <div class="carousel-caption d-md-block">
-        <h5>First slide label</h5>
+        <h5></h5>
         <p>Some WWW representative placeholder content for the first slide.</p>
       </div>
     </div>
