--- a/index.html
+++ b/index.html
@@ -274,8 +274,9 @@
 		<div class="container">
 				<div class="row">
 					<div class="col-xxl-8 col-md-8  col-10 mx-auto">
-						
-					<button type="button" class="btn btn-outline-info" title="@H_Gary_Zhao" href="https://x.com/H_Gary_Zhao">Link to my Twitter</button>	
+						<a  href="https://x.com/H_Gary_Zhao">	
+							<button type="button" class="btn btn-outline-info" title="@H_Gary_Zhao" >Link to my Twitter</button>
+						</a>
 					</div>
 					
 				</div>
