--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </button>
 
   </div>
+</nav>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container-fluid">
     
 
