--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container-fluid">
-    <a class="navbar-brand text-capitalize" href="index.html">H. Gary Zhao &nbsp; &nbsp; &nbsp; &nbsp;  <strong>Early Diagnosis and Early Intervention in Translational Hematology &nbsp; &nbsp; &nbsp; &nbsp;</strong></a>
+    <a class="navbar-brand text-capitalize" href="index.html">H. Gary Zhao &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Early Diagnosis and Early Intervention in Translational Hematology &nbsp; &nbsp; &nbsp; &nbsp;</strong></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,7 +35,7 @@
     
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
