--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </li>
 	      
         <li class="nav-item">
-          <a class="navbar-brand text-capitalize active" ><strong>&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; </strong></a>
+          <a class="navbar-brand text-capitalize active" ><strong>&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></a>
         </li>
 	      
       </ul>
