--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="navbar-brand dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
             <strong>Projects</strong>
           </a>
-          <ul class="dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item " href="#">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
 	    <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item " href="#">[Data-driven ] Early Intervention of Chronic Myeloid Malignancies</a></li>
@@ -61,7 +61,7 @@
         </li>
 	      
         <li class="nav-item">
-          <a class="navbar-brand text-capitalize active" ><strong>&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </strong></a>
+          <a class="navbar-brand text-capitalize active" ><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </strong></a>
         </li>
 	      
       </ul>
