--- a/Publications.html
+++ b/Publications.html
@@ -84,7 +84,7 @@
         <div class="row gy-2 my-5">
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid">
+                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid"  href="https://www.nature.com/articles/nm.4178">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
