--- a/Publications.html
+++ b/Publications.html
@@ -60,7 +60,7 @@
         </li>
 	      
         <li class="nav-item">
-          <a class="navbar-brand text-capitalize active" ><strong>&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></a>
+          <a class="navbar-brand text-capitalize active" ><strong>&nbsp;</strong></a>
         </li>
 	      
       </ul>
