--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. </p>
-					<button type="button" class="btn btn-outline-info">Learn More</button>
+					<button type="button" class="btn btn-outline-info" href="short CV_05_2024.pdf">Learn More</button>
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 my-5">
@@ -189,6 +189,7 @@
 				<div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
 						<h1 class="text-white">Check out my other platforms</h1>
+						<p>&nbsp;</p>
 						<p><strong>Google Scholar</strong> has a list of my publications with citation numbers of each one.</p>
 						<a  href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank">	
 							<button type="button" class="btn btn-outline-light" title="Google Scholar profile" ><strong>Link to my Google Scholar profile</strong></button>
