--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. </p>
-					<button type="button" class="btn btn-outline-info" href="short CV_05_2024.pdf">Learn More</button>
+					<a href="short CV_05_2024.pdf">
+						<button type="button" class="btn btn-outline-info" >Learn More</button>
+					</a>
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 my-5">
