--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="row my-5">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6">
 					<figure>
-						<img src="images/images/Picture1.bmp" class="img-fluid about_img">
+						<img src="images/images/06144 (1).jpg" class="img-fluid about_img">
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
@@ -153,12 +153,8 @@
 			<div class="row my-5">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>My Journey</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. </p>
-					<a href="short CV_05_2024.pdf">
+					<p>I wanted to help the doctors when they tell the patients that there are no better options available, so I pursued my education and career of medical research. </p>
+					<a href="short CV_05_2024.pdf" target="_blank">
 						<button type="button" class="btn btn-outline-info" >Learn More</button>
 					</a>
 				</div>
