--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
 		<!-- container start -->
 		<div class="container">
-			<!-- 1st row end -->
+			
 			<div class="row my-5">
-				<div class="col-lg-6 col-md-6 col-12 col-xxl-6">
+				<div class="col-lg-3 col-md-3 col-6 col-xxl-3">
 					<figure>
-						<img src="images/images/06144 (1).jpg" class="img-fluid about_img">
+						<img src="images/images/06144(1).JPG" class="img-fluid about_img">
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
@@ -159,7 +159,7 @@
 					</a>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 my-5">
+				<div class="col-lg-4 col-md-4 col-8 col-xxl-4 my-5">
 					<figure>
 						<img src="images/images/Picture1.bmp" class="img-fluid about_img">
 					</figure>
