--- a/Publications.html
+++ b/Publications.html
@@ -83,33 +83,35 @@
       <div class="container">
         <div class="row gy-2 my-5">
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
+              <a href="https://www.nature.com/articles/nm.4178">
+		      <figure>
+	                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid">
+	              </figure>
+	      </a>	
+          </div>
+          <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid"  href="https://www.nature.com/articles/nm.4178">
+                <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/slider2.jpg" alt="Gellery" class="img-fluid">
+                <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/slider1.jpg" alt="Gellery" class="img-fluid">
+                <img src="images/journals/lanceth.jpg" alt="Gellery" class="img-fluid">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/slider2.jpg" alt="Gellery" class="img-fluid">
+                <img src="images/journals/leu.png" alt="Gellery" class="img-fluid">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
               <figure>
-                <img src="images/g1.jpg" alt="Gellery" class="img-fluid">
-              </figure>
-          </div>
-          <div class="col-md-4 col-10 col-xxl-4 mx-auto">
-              <figure>
-                <img src="images/slider1.jpg" alt="Gellery" class="img-fluid">
+                <img src="images/bje.png" alt="Gellery" class="img-fluid">
               </figure>
           </div>
           <div class="col-md-4 col-10 col-xxl-4 mx-auto">
