--- a/Publications.html
+++ b/Publications.html
@@ -111,7 +111,7 @@
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <figure>
-                <img src="images/bje.png" alt="Gellery" class="img-fluid">
+                <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
               </figure>
           </div>
 
