--- a/Publications.html
+++ b/Publications.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-	<title>Gallery</title>
+	<title>Select Publications</title>
 </head>
 <body>
 
@@ -90,29 +90,39 @@
 	      </a>	
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <figure>
+              <a href="https://www.nature.com/articles/nm.4178">
+		  <figure>
                 <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
               </figure>
+	</a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <figure>
+              <a href="https://www.nature.com/articles/nm.4178">
+		  <figure>
                 <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
               </figure>
+		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <figure>
+              <a href="https://www.nature.com/articles/nm.4178">
+		  <figure>
                 <img src="images/journals/lanceth.jpg" alt="Gellery" class="img-fluid">
               </figure>
+		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <figure>
+              <a href="https://www.nature.com/articles/nm.4178">
+		  <figure>
                 <img src="images/journals/leu.png" alt="Gellery" class="img-fluid">
               </figure>
+		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <figure>
+              <a href="https://www.nature.com/articles/nm.4178">
+		  <figure>
                 <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
               </figure>
+		      </a>
           </div>
 
           
