--- a/Publications.html
+++ b/Publications.html
@@ -133,6 +133,7 @@
 
     <!-- Gellery section End -->
 
+    <a href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank"><h2>For a full list of my publications, visit my Google Scholar profile --></h2></a>		
 
 		<!-- footer section start-->
 			<footer class="bg-secondary text-center text-white">
