--- a/Publications.html
+++ b/Publications.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-	<title>Select Publications</title>
+	<title>Publications</title>
 </head>
 <body>
 
@@ -76,7 +76,7 @@
 
     <section class="main_heading my-5 mt-5">
       <div class="text-center ">
-        <h1 class="display-4">Gallery</h1>
+        <h1 class="display-4">Select Publications</h1>
         <hr class="w-25 mx-auto" />
       </div>
 
@@ -133,7 +133,11 @@
 
     <!-- Gellery section End -->
 
-    <a href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank"><h2>For a full list of my publications, visit my Google Scholar profile --></h2></a>		
+    <a href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank">
+	    <div class="text-center ">
+        	<h3 class="display-4">For a full list of my publications, please visit my Google Scholar profile from here:</h1>
+        	<hr class="w-25 mx-auto" />
+      </div></a>		
 
 		<!-- footer section start-->
 			<footer class="bg-secondary text-center text-white">
