--- a/Publications.html
+++ b/Publications.html
@@ -135,7 +135,7 @@
 
     <a href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank">
 	    <div class="text-center ">
-        	<h3 class="display-4">For a full list of my publications, please visit my Google Scholar profile from here:</h3>
+        	<h3>For a full list of my publications, please visit my Google Scholar profile from here:</h3>
         	<hr class="w-25 mx-auto" />
       </div></a>		
 
