--- a/Publications.html
+++ b/Publications.html
@@ -90,35 +90,35 @@
 	      </a>	
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://ashpublications.org/blood/article/139/5/761/477970/MS4A3-promotes-differentiation-in-chronic-myeloid">
 		  <figure>
                 <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
               </figure>
 	</a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://ashpublications.org/blood/article/141/23/2797/495028">
 		  <figure>
                 <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext">
 		  <figure>
                 <img src="images/journals/lanceth.jpg" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://www.nature.com/articles/s41375-020-01045-9">
 		  <figure>
                 <img src="images/journals/leu.png" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext">
 		  <figure>
                 <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
               </figure>
@@ -135,7 +135,8 @@
 
     <a href="https://scholar.google.com/citations?user=0Ki6YfwAAAAJ&hl=en" target="_blank">
 	    <div class="text-center ">
-        	<h3>For a full list of my publications, please visit my Google Scholar profile from here:</h3>
+		    <hr class="w-25 mx-auto" />
+        	<h3>For a full list of my publications, visit my Google Scholar profile here:</h3>
         	<hr class="w-25 mx-auto" />
       </div></a>		
 
