--- a/Publications.html
+++ b/Publications.html
@@ -138,7 +138,10 @@
 		    <hr class="w-25 mx-auto" />
         	<h3>For a full list of my publications, visit my Google Scholar profile here:</h3>
         	<hr class="w-25 mx-auto" />
-      </div></a>		
+      </div></a>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
 
 		<!-- footer section start-->
 			<footer class="bg-secondary text-center text-white">
