--- a/Publications.html
+++ b/Publications.html
@@ -88,6 +88,7 @@
 	                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid">
 	              </figure>
 	      </a>	
+		  <h5 href="https://www.nature.com/articles/nm.4178">Zhao, H., Mleynek, T. & Li, D. Dysregulated exocytosis of angiopoietin-2 drives cerebral cavernous malformation. Nat Med (2016).</h5>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <a href="https://ashpublications.org/blood/article/139/5/761/477970/MS4A3-promotes-differentiation-in-chronic-myeloid">
