--- a/Publications.html
+++ b/Publications.html
@@ -83,43 +83,45 @@
       <div class="container">
         <div class="row gy-2 my-5">
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/nm.4178">
+              <a href="https://www.nature.com/articles/nm.4178" target="_blank">
 		      <figure>
 	                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid">
 	              </figure>
 	      </a>	
-		  <h5 href="https://www.nature.com/articles/nm.4178">Zhao, H., Mleynek, T. & Li, D. Dysregulated exocytosis of angiopoietin-2 drives cerebral cavernous malformation. Nat Med (2016).</h5>
+		  <a href="https://www.nature.com/articles/nm.4178" target="_blank">
+			  <h5>Zhao, H., Mleynek, T. & Li, D. Dysregulated exocytosis of angiopoietin-2 drives cerebral cavernous malformation. Nat Med (2016).</h5>
+		  </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://ashpublications.org/blood/article/139/5/761/477970/MS4A3-promotes-differentiation-in-chronic-myeloid">
+              <a href="https://ashpublications.org/blood/article/139/5/761/477970/MS4A3-promotes-differentiation-in-chronic-myeloid" target="_blank">
 		  <figure>
                 <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
               </figure>
 	</a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://ashpublications.org/blood/article/141/23/2797/495028">
+              <a href="https://ashpublications.org/blood/article/141/23/2797/495028" target="_blank">
 		  <figure>
                 <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext">
+              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext" target="_blank">
 		  <figure>
                 <img src="images/journals/lanceth.jpg" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.nature.com/articles/s41375-020-01045-9">
+              <a href="https://www.nature.com/articles/s41375-020-01045-9" target="_blank">
 		  <figure>
                 <img src="images/journals/leu.png" alt="Gellery" class="img-fluid">
               </figure>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext">
+              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext" target="_blank">
 		  <figure>
                 <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
               </figure>
