--- a/Publications.html
+++ b/Publications.html
@@ -87,7 +87,7 @@
 		      <figure>
 	                <img src="images/journals/nm.png" alt="Gellery" class="img-fluid">
 	              </figure>
-		      <h5>Zhao, H., Mleynek, T. & Li, D. Dysregulated exocytosis of angiopoietin-2 drives cerebral cavernous malformation. Nat Med (2016).</h5>
+		      <h6>Zhao, H., Mleynek, T. & Li, D. Dysregulated exocytosis of angiopoietin-2 drives cerebral cavernous malformation. Nat Med (2016).</h6>
 	      </a>	
 
           </div>
@@ -96,6 +96,7 @@
 		  <figure>
                 <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
               </figure>
+		      <h6>Zhao, H., Pomicter, A., Eiring, A., et al. MS4A3 promotes differentiation in chronic myeloid leukemia by enhancing common β-chain cytokine receptor endocytosis. Blood (2022).</h6>
 	</a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
@@ -103,6 +104,7 @@
 		  <figure>
                 <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
               </figure>
+		      <h6>Zhao, H.G. & Deininger, M. Always stressed but never exhausted: how stem cells in myeloid neoplasms avoid extinction in inflammatory conditions. Blood (2023).</h6>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
@@ -110,6 +112,7 @@
 		  <figure>
                 <img src="images/journals/lanceth.jpg" alt="Gellery" class="img-fluid">
               </figure>
+		      <h6>Zhao, H. & Deininger, M. Eradicating residual chronic myeloid leukaemia: basic research lost in translation. Lancet Haematol (2021).</h6>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
@@ -117,13 +120,15 @@
 		  <figure>
                 <img src="images/journals/leu.png" alt="Gellery" class="img-fluid">
               </figure>
+		      <h6>Zhao, H., Mendenhall, M. & Deininger, M.W. Imatinib is not a potent anti-SARS-CoV-2 drug. Leukemia (2020).</h6>
 		      </a>
           </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
-              <a href="https://www.thelancet.com/journals/lanhae/article/PIIS2352-3026(21)00001-6/fulltext" target="_blank">
+              <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/bjh.19254" target="_blank">
 		  <figure>
                 <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
               </figure>
+		       <h6>Zhao, H.G. Should oligomonocytic CMML be classified as an independent disease entity? Br J Haematol (2024).</h6>
 		      </a>
           </div>
 
