--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,8 @@
     <div class="container">
         <div class="row">
           <div class="col-xxl-8 col-md-8  col-10 mx-auto">
- 		<h3> Please contact me via Email [helong.zhao |at| dkfz-heidelberg.de] or Twitter [@H_Gary_Zhao].
-		I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h3>
+ 		<h3> Please contact me via Email [helong.zhao |at| dkfz-heidelberg.de] or Twitter [@H_Gary_Zhao].</h3>
+		<h3> I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h3>
             
           </div>
           
