--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
     <div class="container">
         <div class="row">
           <div class="col-xxl-8 col-md-8  col-10 mx-auto">
- 		<h4> Please contact me via Email [helong.zhao |at| dkfz-heidelberg.de] or Twitter [@H_Gary_Zhao].</h4>
+ 		<h4 class="text-center"> Please contact me via Email [helong.zhao |at| dkfz-heidelberg.de] or Twitter [@H_Gary_Zhao].</h4>
 		  <p>&nbsp;</p>
-		<h4> I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h4>
+		<h4 class="text-center"> I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h4>
             
           </div>
           
