--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 		  <p>&nbsp;</p>
 		<h4 class="text-center"> I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h4>
 		   <p>&nbsp;</p>
-		<h4 class="text-center"> at Fred Hutch Cancer Center, Seattle since 2024 </h4>
+		<h4 class="text-center"> At Fred Hutch Cancer Center, Seattle | Since 2024 </h4>
             
             
           </div>
