--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container-fluid">
-    <a class="navbar-brand text-capitalize" href="index.html"><h2>H. Gary Zhao &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <strong>Early Diagnosis and Early Intervention in Hematology &nbsp; &nbsp; &nbsp; &nbsp;</strong></h2></a>
+    <a class="navbar-brand text-capitalize" href="index.html"><p class = "navbar-text"><h2>H. Gary Zhao &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <strong>Early Diagnosis and Early Intervention in Hematology &nbsp; &nbsp; &nbsp; &nbsp;</strong></h2></p></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
