--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					<h2>My Journey</h2>
 					<p>In my teenage years, I wanted to help the doctors when they tell the patients that there are no better options available, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio. 
 					   In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.
-					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfort.
+					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.
 					   Now, after 20 years of education and training, I hold a hiking cane and a torch on my journay of discoveries as I pass on my knowledge (at Seattle).
 					</p>
 					<a href="short CV_05_2024.pdf" target="_blank">
