--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
 			<div class="row my-5">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>My Journey</h2>
-					<p>In my teenage years, I wanted to help the doctors when they tell the patients that there are no better options available, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio. 
-					   In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.
-					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.
-					   Now, after 20 years of education and training, I hold a hiking cane and a torch on my journay of discoveries as I pass on my knowledge (at Seattle).
-					</p>
+					<p>In my teenage years, I wanted to help the doctors when they tell the patients that there are no better options available, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio.</p> 
+					   <p>In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.</p>
+					   <p>In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.</p>
+					   <p>Now, after 20 years of education and training, I hold a hiking cane and a torch on my journay of discoveries as I pass on my knowledge (at Seattle).</p>
+				
 					<a href="short CV_05_2024.pdf" target="_blank">
 						<button type="button" class="btn btn-outline-info" >Learn More</button>
 					</a>
