--- a/Publications.html
+++ b/Publications.html
@@ -43,7 +43,7 @@
           <a class="navbar-brand dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
             <strong>Projects</strong>
           </a>
-          <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item " href="#">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
 	    <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item " href="#">[Data-driven ] Early Intervention of Chronic Myeloid Malignancies</a></li>
