--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio.</p> 
 					   <p>In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.</p>
 					   <p>In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.</p>
-					   <p>Now, after 20 years of education and training, I hold a hiking cane and a torch on my journay of discoveries as I pass on my knowledge (at Seattle).</p>
+					   <p>Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, walking and passing on my knowledge. (at Seattle)</p>
 				
 					<a href="short CV_05_2024.pdf" target="_blank">
 						<button type="button" class="btn btn-outline-info" >Learn More</button>
