--- a/Publications.html
+++ b/Publications.html
@@ -94,7 +94,7 @@
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <a href="https://ashpublications.org/blood/article/139/5/761/477970/MS4A3-promotes-differentiation-in-chronic-myeloid" target="_blank">
 		  <figure>
-                <img src="images/journals/bl.png" alt="Gellery" class="img-fluid">
+                <img src="images/journals/bl.jpg" alt="Gellery" class="img-fluid">
               </figure>
 		      <h6>Zhao, H., Pomicter, A., Eiring, A., et al. MS4A3 promotes differentiation in chronic myeloid leukemia by enhancing common β-chain cytokine receptor endocytosis. Blood (2022).</h6>
 	</a>
@@ -102,7 +102,7 @@
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <a href="https://ashpublications.org/blood/article/141/23/2797/495028" target="_blank">
 		  <figure>
-                <img src="images/journals/bl2.png" alt="Gellery" class="img-fluid">
+                <img src="images/journals/bl2.jpg" alt="Gellery" class="img-fluid">
               </figure>
 		      <h6>Zhao, H.G. & Deininger, M. Always stressed but never exhausted: how stem cells in myeloid neoplasms avoid extinction in inflammatory conditions. Blood (2023).</h6>
 		      </a>
@@ -126,7 +126,7 @@
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/bjh.19254" target="_blank">
 		  <figure>
-                <img src="images/journals/bje.png" alt="Gellery" class="img-fluid">
+                <img src="images/journals/bjh.jpg" alt="Gellery" class="img-fluid">
               </figure>
 		       <h6>Zhao, H.G. Should oligomonocytic CMML be classified as an independent disease entity? Br J Haematol (2024).</h6>
 		      </a>
