--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="2000">
-      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.png">
+      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.jpg">
       <div class="carousel-caption d-md-block">
         <h5></h5>
         
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="images/images/precision medicine.png" class="d-block w-100" alt="images/images/precision medicine.png">
+      <img src="images/images/precision medicine.png" class="d-block w-100" alt="images/images/precision medicine.jpg">
       <div class="carousel-caption d-md-block">
         <h5></h5>
        
