--- a/Project1.html
+++ b/Project1.html
@@ -82,7 +82,8 @@
 
 		<section class="main_heading my-5">
 			<div class="text-center ">
-				<h1 class="display-4">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</h1>
+				<h1 class="display-4">[Machine Learning]</h1>
+				<h1 class="display-4">Early Diagnosis of Clonal Hematological Abnormalities</h1>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
