--- a/Project1.html
+++ b/Project1.html
@@ -95,9 +95,14 @@
 		<div class="container">
 			
 			<div class="row my-5">
-				<div class="col-lg-3 col-md-3 col-6 col-xxl-3">
+				<div class="col-lg-5 col-md-5 col-10 col-xxl-5">
 					<figure>
 						<img src="images/images/EHA2024.png" class="img-fluid about_img">
+					</figure>
+				</div>
+				<div class="col-lg-5 col-md-5 col-10 col-xxl-5">
+					<figure>
+						<img src="images/images/Picture2.png" class="img-fluid about_img">
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
