--- a/Project1.html
+++ b/Project1.html
@@ -104,7 +104,8 @@
 					<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>Why do we care about this research?</h2>
 					<p>Early diagnosis is the key to catching pre-cancerous leisions in healthy individuals.</p>
-					
+					<h2>How do I develop a diagnostic test that is cheap, rapid, and accurate to be used in healthy individual screening?</h2>
+					<p>Minimal sample processing + Machine learning (AI) powered mutant cell detection + Well-engineered cytometry platform</p>
 					</div>
 
 				
