--- a/Project1.html
+++ b/Project1.html
@@ -103,9 +103,14 @@
 
 					<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>Why do we care about this research?</h2>
-					<p>Early diagnosis is the key to catching pre-cancerous leisions in healthy individuals.</p>
-						<hr class="w-25 mx-auto" />
-					<h2>How do I develop a diagnostic test that is cheap, rapid, and accurate to be used in healthy individual screening?</h2>
+					<p>Very few doctors would argue against the concept of "the best treatment is to prevent the disease from happening". Most of us are aware that, in dermatology,
+						removing a suspicious mole has very low risk but can greatly extend patients' survival. This is a way better treatment than chemotherapy after aggressive
+						skin cancer has progressed. Early diagnosis is the key to catching pre-cancerous leisions in healthy individuals. In hematology, one would be able to decide
+						whether and how to prevent disease development if one is given a suitable test to catch early mutant blood leisions as conveniently as finding a suspicious 
+						mole on the skin. Our research is aimed at making this possible.  
+					</p>
+						<hr class="w-50 mx-auto" />
+					<h2>How do we develop a diagnostic test that is cheap, rapid, and accurate to be used in healthy individual screening?</h2>
 					<p>Minimal sample processing + Machine learning (AI) powered mutant cell detection + Well-engineered cytometry platform</p>
 					</div>
 
