--- a/Publications.html
+++ b/Publications.html
@@ -44,7 +44,7 @@
             <strong>Projects</strong>
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item " href="#">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
+            <li><a class="dropdown-item " href="Project1.html">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
 	    <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item " href="#">[Data-driven ] Early Intervention of Chronic Myeloid Malignancies</a></li>
                       
