--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 
     <section class="main_heading my-5 mt-5">
       <div class="text-center ">
-        <h1 class="display-4">Contact Me</h1>
+        <h1 class="display-4">Contact me</h1>
         <hr class="w-25 mx-auto" />
       </div>
 
