--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item " href="Project1.html">[Machine Learning] Early Diagnosis of Clonal Hematological Abnormalities</a></li>
 	    <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item " href="#">[Data-driven ] Early Intervention of Chronic Myeloid Malignancies</a></li>
+            <li><a class="dropdown-item " href="Project2.html">[Data-driven ] Early Intervention of Chronic Myeloid Malignancies</a></li>
                       
           </ul>
         </li>
