--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>Helong Gary Zhao, B.Eng., Ph.D.</h2>
 					<p>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</p>
-					
+					<p>[currently affiliated with German Cancer Research Center (DKFZ)]</p>
 				</div>
 			</div>
 			<!-- 1st row end -->
@@ -156,7 +156,7 @@
 					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio.</p> 
 					   <p>In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.</p>
 					   <p>In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.</p>
-					   <p>Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, walking and passing on my knowledge. (at Seattle)</p>
+					   <p>Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, walking and passing on my knowledge.</p>
 				
 					<a href="short CV_05_2024.pdf" target="_blank">
 						<button type="button" class="btn btn-outline-info" >Learn More</button>
