--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="3000">
-      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.jpg">
+      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.png">
       <div class="carousel-caption d-md-block">
         <h5></h5>
         
