--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 		<!-- About Me section -->
 
-		<section class="main_heading my-5">
+		<section class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 			<div class="text-center ">
 				<h2 class="display-4">About me</h2>
 				<hr class="w-25 mx-auto" />
