--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
 		<!-- About Me section -->
 
-		<section class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
+		<section class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center flex-column">
 			<div class="text-center ">
-				<h2 class="display-4">About me</h2>
+				<h3 class="display-4">About me</h3>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
