--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 		<section class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center flex-column">
 			<div class="text-center ">
-				<h3 class="display-4">About me</h3>
+				<h3 class="text-center">About me</h3>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
