--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
 
 		<!-- About Me section -->
 
-		<section class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center flex-column">
+		<section class="display-5">
 			<div class="text-center ">
-				<h3 class="text-center">About me</h3>
-				<hr class="w-25 mx-auto" />
+				<h3 class="display-5">About me</h3>
 			</div>
 			
 		</section>
