--- a/Project1.html
+++ b/Project1.html
@@ -80,8 +80,8 @@
 
 		<!-- About Me section -->
 
-		<section class="main_heading my-5">
-			<div class="text-center ">
+		<section class="display-5">
+			<div class="display-5 ">
 				<h3 class="display-5">[Machine Learning]</h3>
 				<h3 class="display-5">Early Diagnosis of Clonal Hematological Abnormalities</h3>
 				<hr class="w-25 mx-auto" />
