--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		<section class="display-5">
 			<div class="text-center ">
 				<h3 class="display-5">About me</h3>
+				<hr class="w-25 mx-auto" />
 			</div>
 			
 		</section>
