--- a/Project1.html
+++ b/Project1.html
@@ -81,9 +81,9 @@
 		<!-- About Me section -->
 
 		<section class="display-5">
-			<div class="display-5 ">
-				<h3 class="display-5">[Machine Learning]</h3>
-				<h3 class="display-5">Early Diagnosis of Clonal Hematological Abnormalities</h3>
+			<div class="text-center">
+				<h3 class="text-center">[Machine Learning]</h3>
+				<h3 class="text-center">Early Diagnosis of Clonal Hematological Abnormalities</h3>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
