--- a/Project2.html
+++ b/Project2.html
@@ -80,10 +80,10 @@
 
 		<!-- About Me section -->
 
-		<section class="main_heading my-5">
+		<section class="display-5">
 			<div class="text-center ">
-				<h3 class="display-5">[Data-driven Therapeutics]</h3>
-				<h3 class="display-5">Early Intervention of Chronic Myeloid Malignancies</h3>
+				<h3 class="text-center">[Data-driven Therapeutics]</h3>
+				<h3 class="text-center">Early Intervention of Chronic Myeloid Malignancies</h3>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
