--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
 		<!-- About Me section -->
 
-		<section class="display-5">
-			<div class="text-center ">
-				<h3 class="display-5">About me</h3>
+		<section class="text-center">
+			<div class="text-center">
+				<h2 class="text-center">About me</h2>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
