--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
 		<section class="text-center">
 			<div class="text-center">
-				<h2 class="text-center">About me</h2>
+				<h2 class="text-center"> </h2>
+				<h1 class="text-center">About me</h1>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
