--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
     <div class="container">
         <div class="row">
           <div class="col-xxl-6 col-md-6  col-8 mx-auto">
- 		<h4 class="text-center"> Please contact me via Email [helong.gary.zhao |at| alumni.dkfz.de] or Twitter [@H_Gary_Zhao].</h4>
+ 		<h4 class="text-center"> Please contact me via Email <helong.gary.zhao |at| alumni.dkfz.de> or Twitter <@H_Gary_Zhao>.</h4>
 		  <p>&nbsp;</p>
 		<h4 class="text-center"> I am happy to host a visit to my research facility if you are interested in my work or are considering to donate to my research.</h4>
 		   <p>&nbsp;</p>
