--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<div class="row my-5">
 				<div class="col-lg-3 col-md-3 col-6 col-xxl-3">
 					<figure>
-						<img src="images/images/x_logo.jpg" class="img-fluid about_img">
+						<img src="images/images/ai_snail.png" class="img-fluid about_img">
 					</figure>
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
