--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<!-- container start -->
 		<div class="container">
 			
-			<div class="row my-5">
+			<div class="row my-5  justify-content-center">
 				<div class="col-lg-3 col-md-3 col-6 col-xxl-3">
 					<figure>
 						<img src="images/images/ai_snail.png" class="img-fluid about_img">
@@ -145,7 +145,7 @@
 
 
 			<!-- second row -->
-			<div class="row my-5">
+			<div class="row my-5 justify-content-center">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>My Journey</h2>
 					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio. 
@@ -190,9 +190,9 @@
 		<!-- container start -->
 		<div class="container">
 			
-			<div class="row my-5">
+			<div class="row my-5 justify-content-center">
 				
-				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
+				<div class="col-lg-12 col-md-12 col-12 col-xxl-12 d-flex justify-content-center align-items-start flex-column">
 					<h2>
 						Human behaviors and neurological diversities
 					</h2>
