--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="text-center">
 				<h2 class="text-center"> </h2>
 				<h1 class="text-center">Jiffy Science</h1>
-				<h3 class="text-center"> [Eclectic short scientific essays I wrote for your amusement]</h3>
+				<h4 class="text-center"><em> [Eclectic short scientific essays I wrote for your amusement] </em></h4>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
@@ -193,17 +193,18 @@
 			<div class="row my-5 justify-content-center">
 				
 				<div class="col-lg-12 col-md-12 col-12 col-xxl-12 d-flex justify-content-center align-items-start flex-column">
-					<h2>
+					<h2 class="text-center">
 						Human behaviors and neurological diversities
 					</h2>
 					<p>
 						[10/26/2024]
-
-"Delving into Oliver Sacks' Musicophilia, we're invited to ponder a fascinating question: How many of our behaviors, often seen as quirky or exceptional, are simply neurological variations?
+					</p>
+<p>
+Delving into Oliver Sacks' Musicophilia, we're invited to ponder a fascinating question: How many of our behaviors, often seen as quirky or exceptional, are simply neurological variations?
 Consider the musician who claims to hear symphonies in their mind, a phenomenon Sacks terms 'music hallucination.' Or the individual who suddenly becomes obsessed with a particular instrument or genre, a condition known as 'sudden musicophilia.' These aren't supernatural abilities but rather neurological quirks, as unique as a fingerprint.
 Absolute pitch, often hailed as a miraculous talent, is merely a heightened sensitivity to auditory cues. For those who possess it, every note is as distinct as a color on an artist's palette. It's as if they can taste the flavor of a note, or perhaps even smell the scent of a chord.
 And what of those who struggle with music? Those who can't quite hit the right note, or who find certain genres baffling? Perhaps they're missing a piece of the auditory puzzle, a neural nuance that others take for granted. It's as if they're listening to the world through a slightly fogged-up window.
-Even the most eccentric behaviors, like those exhibited by individuals with schizophrenia, may have their roots in neurological differences. They are, in a sense, artists of the mind, painting with strokes of delusion and hallucination."
+Even the most eccentric behaviors, like those exhibited by individuals with schizophrenia, may have their roots in neurological differences. They are, in a sense, artists of the mind, painting with strokes of delusion and hallucination.
 Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggressive or bullying behavior may sometimes stem from neurodevelopmental differences. An unusually high level of energy and intense focus on a goal can be indicative of a manic state. And a preference for solitary activities or challenges in social situations might be associated with autism spectrum disorder
 
 					</p>
