--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="text-center">
 				<h2 class="text-center"> </h2>
 				<h1 class="text-center">Jiffy Science</h1>
-				<h4 class="text-center"><em> [Eclectic short scientific essays I wrote for your amusement] </em></h4>
+				<h4 class="text-center"><em> [Eclectic short essays I wrote for a chuckle] </em></h4>
 				<hr class="w-25 mx-auto" />
 			</div>
 			
