--- a/jiffy_science.html
+++ b/jiffy_science.html
@@ -78,17 +78,19 @@
     <section class="main_heading my-5 mt-5">
       <div class="text-center ">
         <h1 class="display-4">Jiffy Science</h1>
-        <h4 class="text-center"><em> [Eclectic short scientific essays I wrote for your amusement]</em></h4>
+        <h4 class="text-center"><em> [Eclectic short essays I wrote for a chuckle]</em></h4>
         <hr class="w-25 mx-auto" />
       </div>
 
     <div class="container">
         <div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
-						<h1>Title to be updated.</h1>
+						<h1>Human behaviors and neurological diversities</h1>
 						<p>&nbsp;</p>
 		<p>
-            Content to be updated.
+            [10/26/2024]
+
+Delving into Oliver Sacks' Musicophilia, we're invited to ponder a fascinating question: How many of our behaviors, often seen as quirky or exceptional, are simply neurological variations? Consider the musician who claims to hear symphonies in their mind, a phenomenon Sacks terms 'music hallucination.' Or the individual who suddenly becomes obsessed with a particular instrument or genre, a condition known as 'sudden musicophilia.' These aren't supernatural abilities but rather neurological quirks, as unique as a fingerprint. Absolute pitch, often hailed as a miraculous talent, is merely a heightened sensitivity to auditory cues. For those who possess it, every note is as distinct as a color on an artist's palette. It's as if they can taste the flavor of a note, or perhaps even smell the scent of a chord. And what of those who struggle with music? Those who can't quite hit the right note, or who find certain genres baffling? Perhaps they're missing a piece of the auditory puzzle, a neural nuance that others take for granted. It's as if they're listening to the world through a slightly fogged-up window. Even the most eccentric behaviors, like those exhibited by individuals with schizophrenia, may have their roots in neurological differences. They are, in a sense, artists of the mind, painting with strokes of delusion and hallucination. Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggressive or bullying behavior may sometimes stem from neurodevelopmental differences. An unusually high level of energy and intense focus on a goal can be indicative of a manic state. And a preference for solitary activities or challenges in social situations might be associated with autism spectrum disorder.
             </p>
 						
 					</div>
@@ -107,10 +109,25 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
-						<h1 class="text-white">Title to be updated.</h1>
+						<h1 class="text-white">How Do You Allocate Your Brain’s Resources?
+— Do you choose to devote 70% of your mind to happiness or worry?</h1>
 						<p>&nbsp;</p>
 		<p>
-            Content to be updated.
+            [11/02/2024]
+
+			The human brain, it turns out, is far more adaptable than we often give it credit for. In fact, its plasticity is almost unbelievable. A French neurologist once documented a patient who, after losing 70% of his brain due to a fluid buildup, continued to live with normal cognitive abilities and daily functionality. Blind individuals, too, often experience remarkable shifts in their other senses, with some developing extraordinary musical talents, like perfect pitch, or heightened sensitivity to touch, sound, and smell.
+
+Yet, despite its astonishing flexibility, the brain’s capacity is not limitless. The connections between neurons, though numerous, have their constraints. Vision, for instance, demands a huge chunk of our brain’s resources, leaving less room for other senses to flourish. This becomes even clearer when you speak with AI specialists who use powerful GPUs to train machines in visual recognition—systems that, like us, devote a substantial amount of processing power to vision. But, when vision is compromised—say, through blindness—a fascinating thing happens: a third of the brain’s cortex, once dedicated to sight, can be rewired to amplify other sensory experiences, like the appreciation of music.
+
+This evolution of vision as our primary sense was driven by survival and mating advantages. But in focusing so much of our brainpower on what we see, we may have unwittingly sacrificed “superpowers” like perfect pitch, photographic memory, or the kinds of cognitive agility that allow us to process language with lightning speed.
+
+Take the case of a patient Oliver Sacks described, who suffered from synesthesia, a rare condition where senses overlap and are perceived simultaneously. After a brain injury robbed him of his sight and his ability to visualize colors, he began to “see” colors when he heard music. The brain’s auditory centers, previously dedicated to sound, were rewired to evoke the sensation of color instead.
+
+We also have the capacity to actively “train” our brains to enhance certain senses. Just as a form of active meditation can elicit feelings of intense euphoria—like the catharsis of a musical crescendo—frequent stimulation of a particular sensory or cognitive activity strengthens it. This idea is supported by the brain’s plasticity: the more you engage a part of your mind, the more it grows, almost like building muscle.
+
+So, given that sensory activities often compete for our brain’s precious bandwidth, how do you choose to allocate your mental resources? How do you divide your mind’s attention between what makes you feel joy and what pulls you into anxiety? Would you devote 70% of your cognitive capacity to experiencing the bliss of music, art, and nature, igniting creativity and vitality? Or would you choose to use it to scroll through endless newsfeeds, dwelling on worries, fears, and negativity?
+
+It’s no surprise that many deep thinkers—those who spend time in solitude—tend to have a rich inner life. They’re able to nourish their senses and creativity with less distraction. Meanwhile, those addicted to constant social interaction may find themselves caught in shallow emotional states, able to blend in with anyone but never truly immersed in deeper, more meaningful experiences. The way we choose to divide our mental energy speaks volumes about how we experience and navigate the world around us.
             </p>
 						
 					</div>
