--- a/jiffy_science.html
+++ b/jiffy_science.html
@@ -103,15 +103,15 @@ Delving into Oliver Sacks' Musicophilia, we're invited to ponder a fascinating q
     </section>
     <!-- ContactUs section end--> 
 
-<!-- new section start-->
+<!--------------------------------------------- new blue section below ---------------------------------------------->
 		
 
 		<section class="main_heading my-5 py-2 chekcout-my-profile">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
-						<h1 class="text-white">How Do You Allocate Your Brain’s Resources?
-— Do you choose to devote 70% of your mind to happiness or worry?</h1>
+						<h1 class="text-white">How Do You Allocate Your Brain’s Resources?</h1>
+<h1>— Do you choose to devote 70% of your mind to happiness or worry?</h1>
 						<p>&nbsp;</p>
 		<p>
             [11/02/2024] </p>
@@ -138,10 +138,14 @@ It’s no surprise that many deep thinkers—those who spend time in solitude—
 			</div>
 		</section>	
 
-		<!-- new section end-->
+	
+<!--------------------------------------------- new white section below ---------------------------------------------->
+
+	
 
 
 
+	
 
     <!-- footer section start-->
       <footer class="bg-secondary text-center text-white">
