--- a/jiffy_science.html
+++ b/jiffy_science.html
@@ -82,6 +82,8 @@
         <hr class="w-25 mx-auto" />
       </div>
 
+<!--------------------------------------------- new white section below ---------------------------------------------->
+	    
     <div class="container">
         <div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
@@ -110,7 +112,7 @@ Delving into Oliver Sacks' Musicophilia, we're invited to ponder a fascinating q
 			<div class="container">
 				<div class="row">
 					<div class="col-xxl-12 col-12 py-5 text-center">
-						<h1 class="text-white">How Do You Allocate Your Brain’s Resources?</h1>
+						<h1">How Do You Allocate Your Brain’s Resources?</h1>
 <h1>— Do you choose to devote 70% of your mind to happiness or worry?</h1>
 						<p>&nbsp;</p>
 		<p>
