--- a/index.html
+++ b/index.html
@@ -193,6 +193,20 @@
 			<div class="row my-5 justify-content-center">
 				
 				<div class="col-lg-12 col-md-12 col-12 col-xxl-12 d-flex justify-content-center align-items-start flex-column">
+					
+					<h2>
+						The last advice you need for choosing a research mentor:
+					</h2>
+					<p>
+						"Ask for 3 references from their last three or four trainees."
+					</p>
+					<p>
+						Get their past four trainees' contact information, and email / call them. You may think you are not in the position of asking for references from a potential resaerch mentor. But keep in mind - three or six years in your life is not less valuable than your mentor's. You can hear real-life horror stories from any graduate student, and malignant research mentors are not rare in the research community. Luckily, a good research mentor will never be afraid of giving you the contact information for their last four trainees.
+					</p>
+					<p> </p>
+
+					<hr class="w-25 mx-auto" />
+					<p> </p>
 					<h2>
 						Human behaviors and neurological diversities
 					</h2>
