--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<div class="col-lg-12 col-md-12 col-12 col-xxl-12 d-flex justify-content-center align-items-start flex-column">
 					
 					<h2>
-						The last advice you need for choosing a research mentor:
+						The last advice you'll ever need for choosing a research mentor:
 					</h2>
 					<p> [07/01/2024] </p>
 					<p>
